Fix: health check endpoint, booking email format, frontend UX, and SMTP config